--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,33 @@
 {
   "name": "sdc.transportation_dev",
-  "measure_not_found": 0,
-  "count": 5,
-  "utc_audited": "2022-09-21 19:42:49",
+  "count": 3,
+  "utc_audited": "2022-10-11 13:34:30",
   "data": [
     {
-      "name": "distribution.R",
-      "path": "Cost/data/distribution/distribution.R",
-      "md5": "89f6938e015533aab3abd5e85ca0312d",
-      "size": 121
+      "name": "ncr_cttr_acs_2016_2020_vehicles.csv.xz",
+      "path": "Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_vehicles.csv.xz",
+      "md5": "54af045cf8bd5fd2b5e19bd9aa59d735",
+      "size": 27848,
+      "measure_info": [
+        {
+          "category": "Transportation",
+          "type": "percent",
+          "short_name": "Without vehicle",
+          "long_name": "Percentage of households without vehicle available",
+          "short_description": "Households self-reported to not have a vehicle available at home.",
+          "long_description": "Percentage of households self-reported to not have a vehicle available at home. Based on American Community Survey Table S2504 ACS 5-year estimates.",
+          "statement": "{value} of households in {features.name} do not have a vehicle available at home.",
+          "equity_category": "Status",
+          "sources": [
+            {
+              "name": "American Community Survey",
+              "location": "Table S2504",
+              "date_accessed": "2022",
+              "url": "https://www.census.gov/programs-surveys/acs.html"
+            }
+          ]
+        }
+      ]
     },
     {
       "name": "ncr_cttr_acs_2016_2020_commutes.csv.xz",
@@ -61,39 +80,10 @@
           ]
         }
       ]
-    },
-    {
-      "name": "measure_info.json",
-      "path": "Population Characteristics/data/distribution/measure_info.json",
-      "md5": "9a2005df2fa5a1a829d8a2640e2773d2",
-      "size": 2238
-    },
-    {
-      "name": "ncr_cttr_acs_2016_2020_vehicles.csv.xz",
-      "path": "Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_vehicles.csv.xz",
-      "md5": "54af045cf8bd5fd2b5e19bd9aa59d735",
-      "size": 27848,
-      "measure_info": [
-        {
-          "category": "Transportation",
-          "type": "percent",
-          "short_name": "Without vehicle",
-          "long_name": "Percentage of households without vehicle available",
-          "short_description": "Households self-reported to not have a vehicle available at home.",
-          "long_description": "Percentage of households self-reported to not have a vehicle available at home. Based on American Community Survey Table S2504 ACS 5-year estimates.",
-          "statement": "{value} of households in {features.name} do not have a vehicle available at home.",
-          "equity_category": "Status",
-          "sources": [
-            {
-              "name": "American Community Survey",
-              "location": "Table S2504",
-              "date_accessed": "2022",
-              "url": "https://www.census.gov/programs-surveys/acs.html"
-            }
-          ]
-        }
-      ]
     }
   ],
+  "measure_generated": [],
+  "measure_to_check": [],
+  "measures_found": 3,
   "_references": {}
 }
