--- a/manifest.json
+++ b/manifest.json
@@ -1,89 +1,46 @@
 {
   "name": "sdc.transportation_dev",
-  "count": 3,
-  "utc_audited": "2022-10-11 13:36:33",
+  "measure_not_found": [
+    "/home/runner/work/sdc.transportation_dev/sdc.transportation_dev/Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_vehicles.csv.xz",
+    "/home/runner/work/sdc.transportation_dev/sdc.transportation_dev/Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_commutes.csv.xz",
+    "/home/runner/work/sdc.transportation_dev/sdc.transportation_dev/Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_carpools.csv.xz"
+  ],
+  "count": 5,
+  "utc_audited": "2022-10-13 00:51:05",
   "data": [
+    {
+      "name": "distribution.R",
+      "path": "Cost/data/distribution/distribution.R",
+      "md5": "89f6938e015533aab3abd5e85ca0312d",
+      "size": 121
+    },
     {
       "name": "ncr_cttr_acs_2016_2020_vehicles.csv.xz",
       "path": "Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_vehicles.csv.xz",
       "md5": "54af045cf8bd5fd2b5e19bd9aa59d735",
-      "size": 27848,
-      "measure_info": [
-        {
-          "category": "Transportation",
-          "type": "percent",
-          "short_name": "Without vehicle",
-          "long_name": "Percentage of households without vehicle available",
-          "short_description": "Households self-reported to not have a vehicle available at home.",
-          "long_description": "Percentage of households self-reported to not have a vehicle available at home. Based on American Community Survey Table S2504 ACS 5-year estimates.",
-          "statement": "{value} of households in {features.name} do not have a vehicle available at home.",
-          "equity_category": "Status",
-          "sources": [
-            {
-              "name": "American Community Survey",
-              "location": "Table S2504",
-              "date_accessed": "2022",
-              "url": "https://www.census.gov/programs-surveys/acs.html"
-            }
-          ]
-        }
-      ]
+      "size": 27848
     },
     {
       "name": "ncr_cttr_acs_2016_2020_commutes.csv.xz",
       "path": "Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_commutes.csv.xz",
       "md5": "006b733a3653ae813a4249a968e78075",
-      "size": 26344,
-      "measure_info": [
-        {
-          "category": "Transportation",
-          "type": "drive time",
-          "short_name": "Commute time",
-          "long_name": "Mean commute time",
-          "short_description": "Mean commute time.",
-          "long_description": "Self-reported mean travel time to work. Based on American Community Survey Table S0801 ACS 5-year estimates.",
-          "statement": "The mean commute time in {features.name} is {value}.",
-          "equity_category": "Status",
-          "sources": [
-            {
-              "name": "American Community Survey",
-              "location": "Table S0801",
-              "date_accessed": "2022",
-              "url": "https://www.census.gov/programs-surveys/acs.html"
-            }
-          ]
-        }
-      ]
+      "size": 26344
+    },
+    {
+      "name": "measure_info.json",
+      "path": "Population Characteristics/data/distribution/measure_info.json",
+      "md5": "9a2005df2fa5a1a829d8a2640e2773d2",
+      "size": 2238
     },
     {
       "name": "ncr_cttr_acs_2016_2020_carpools.csv.xz",
       "path": "Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_carpools.csv.xz",
       "md5": "1a3594699a8eec1e812fed3619217c42",
-      "size": 28516,
-      "measure_info": [
-        {
-          "category": "Transportation",
-          "type": "percent",
-          "short_name": "Carpool to work",
-          "long_name": "Percentage carpool to work",
-          "short_description": "Population self-reported to carpool to work.",
-          "long_description": "Percentage of population self-reported to carpool to work. Based on American Community Survey Table S0801 ACS 5-year estimates.",
-          "statement": "{value} of the population in {features.name} carpools to work.",
-          "equity_category": "Status",
-          "sources": [
-            {
-              "name": "American Community Survey",
-              "location": "Table S0801",
-              "date_accessed": "2022",
-              "url": "https://www.census.gov/programs-surveys/acs.html"
-            }
-          ]
-        }
-      ]
+      "size": 28516
     }
   ],
   "measure_generated": [],
-  "measure_to_check": [],
-  "measures_found": 3,
+  "no_match_in_measures_info": [],
+  "measures_found": [],
   "_references": {}
 }
