Update from https://github.com/uva-bi-sdad/sdc.transportation_dev/commit/54e4dcac91af3e7274a24f017d2c1f1d8662fa22

--- a/manifest.json
+++ b/manifest.json
@@ -5,14 +5,32 @@
     "/home/runner/work/sdc.transportation_dev/sdc.transportation_dev/Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_commutes.csv.xz",
     "/home/runner/work/sdc.transportation_dev/sdc.transportation_dev/Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_carpools.csv.xz"
   ],
-  "count": 5,
-  "utc_audited": "2022-10-13 00:51:05",
+  "count": 9,
+  "utc_audited": "2022-10-18 22:51:31",
   "data": [
+    {
+      "name": "temp",
+      "path": "Cost/code/distribution/temp",
+      "md5": "d41d8cd98f00b204e9800998ecf8427e",
+      "size": 0
+    },
     {
       "name": "distribution.R",
       "path": "Cost/data/distribution/distribution.R",
       "md5": "89f6938e015533aab3abd5e85ca0312d",
       "size": 121
+    },
+    {
+      "name": "temp",
+      "path": "Cost/docs/distribution/temp",
+      "md5": "d41d8cd98f00b204e9800998ecf8427e",
+      "size": 0
+    },
+    {
+      "name": "temp",
+      "path": "Population Characteristics/code/distribution/temp",
+      "md5": "d41d8cd98f00b204e9800998ecf8427e",
+      "size": 0
     },
     {
       "name": "ncr_cttr_acs_2016_2020_vehicles.csv.xz",
@@ -37,10 +55,13 @@
       "path": "Population Characteristics/data/distribution/ncr_cttr_acs_2016_2020_carpools.csv.xz",
       "md5": "1a3594699a8eec1e812fed3619217c42",
       "size": 28516
+    },
+    {
+      "name": "temp",
+      "path": "Population Characteristics/docs/distribution/temp",
+      "md5": "d41d8cd98f00b204e9800998ecf8427e",
+      "size": 0
     }
   ],
-  "measure_generated": [],
-  "no_match_in_measures_info": [],
-  "measures_found": [],
   "_references": {}
 }
